--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/vue-fontawesome": "^0.1.7",
         "bootstrap-vue": "^2.0.0",
         "moment": "^2.24.0",
+        "sw-precache-webpack-plugin": "^0.11.5",
         "vuex": "^3.1.1"
     }
 }
