--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,8 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png",
+            "src": "/icons8-tasks-96.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/android-chrome-512x512.png",
-            "sizes": "512x512",
             "type": "image/png"
         }
     ],
