--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,10 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "/icons8-tasks-96.png",
-            "sizes": "96x96",
-            "type": "image/png"
+            "src": "icon.png",
+            "sizes": "256x256",
+            "type": "image/png",
+            "purpose": "maskable any"
         }
     ],
     "theme_color": "#f2f2f2",
