--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "bootstrap-vue": "^2.0.0",
         "moment": "^2.24.0",
         "sw-precache-webpack-plugin": "^0.11.5",
+        "vue-router": "^3.1.3",
         "vuex": "^3.1.1"
     }
 }
